# sdl2-emscripten-project-template

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  index.html
cmake/: FindSDL2.cmake  FindSDL2_image.cmake
libs/httplib/: httplib.h
project_files/: FindSDL2.cmake
src/: main.cpp
